# centrifugal-pump

./: Example_1.ipynb  Example_2.ipynb  README.md  Relatório_B-21014AB_12-03-2025.docx  Relatório_B-4300.22101AB_10-03-2025.docx  Report_B-21014AB_12-03-2025.docx  Report_B-4300.22101AB_10-03-2025.docx  Report_B-4300.22101AB_11-03-2025.docx  pip_test.ipynb  pyproject.toml  requirements.txt  utilities_test.ipynb
pump/: __init__.py  performance_curve.py  point.py
pump/templates/: template_en.docx  template_pt.docx
pump/utilities/: __init__.py  fluid.py  report.py  unit_conversion.py
pump/utilities/locales/en/LC_MESSAGES/: messages.po
pump/utilities/locales/pt/LC_MESSAGES/: messages.po
